--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -38,7 +38,8 @@ body {
   }
 
   &.about-body {
-    background: darken($ui-base-color, 8%);
+    background: url('../images/ui-back.png') no-repeat fixed;
+    background-size: cover;
     padding-bottom: 0;
   }
 
