--- a/app/views/about/_registration.html.haml
+++ b/app/views/about/_registration.html.haml
@@ -8,7 +8,8 @@
   = f.input :email, placeholder: t('simple_form.labels.defaults.email'), required: true, input_html: { 'aria-label' => t('simple_form.labels.defaults.email'), :autocomplete => 'off' }
   = f.input :password, placeholder: t('simple_form.labels.defaults.password'), required: true, input_html: { 'aria-label' => t('simple_form.labels.defaults.password'), :autocomplete => 'off' }
   = f.input :password_confirmation, placeholder: t('simple_form.labels.defaults.confirm_password'), required: true, input_html: { 'aria-label' => t('simple_form.labels.defaults.confirm_password'), :autocomplete => 'off' }
-
+  %script{ :async => '', :defer => 'defer', :src => 'https://www.google.com/recaptcha/api.js' }
+  .g-recaptcha{ :data => { :sitekey => '6LeSaB4UAAAAACSjQJRZLS53t3L6ICGN4kKW7PDi' } }
   .actions
     = f.button :button, t('auth.register'), type: :submit, class: 'button button-primary'
 
