--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -1,8 +1,10 @@
 body {
   font-family: 'mastodon-font-sans-serif', sans-serif;
   background: $ui-base-color;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 1)), url('../images/ui-back.png');
   background-size: cover;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   font-size: 13px;
   line-height: 18px;
   font-weight: 400;
@@ -38,8 +40,6 @@ body {
   }
 
   &.about-body {
-    background: url('../images/ui-back.png') no-repeat fixed;
-    background-size: cover;
     padding-bottom: 0;
   }
 
