--- a/app/javascript/styles/mastodon/about.scss
+++ b/app/javascript/styles/mastodon/about.scss
@@ -712,7 +712,7 @@ $small-breakpoint: 960px;
 
       .simple_form,
       .closed-registrations-message {
-        background: darken($ui-base-color, 4%);
+        background: rgba($ui-base-color, 0.8);
         width: 280px;
         padding: 15px 20px;
         border-radius: 4px 4px 0 0;
@@ -741,7 +741,7 @@ $small-breakpoint: 960px;
   }
 
   .about-short {
-    background: darken($ui-base-color, 4%);
+    background: rgba($ui-base-color, 0.8);
     padding: 50px 0 30px;
     font-family: 'mastodon-font-sans-serif', sans-serif;
     font-size: 16px;
@@ -786,7 +786,7 @@ $small-breakpoint: 960px;
   }
 
   &__call-to-action {
-    background: darken($ui-base-color, 4%);
+    background: rgba($ui-base-color, 0.8);
     border-radius: 4px;
     padding: 25px 40px;
     overflow: hidden;
@@ -902,7 +902,7 @@ $small-breakpoint: 960px;
   &__forms,
   #mastodon-timeline {
     box-sizing: border-box;
-    background: $ui-base-color;
+    background: rgba($ui-base-color, 0.8);
     border-radius: 4px;
     box-shadow: 0 0 6px rgba($black, 0.1);
   }
