--- a/app/javascript/styles/mastodon/stream_entries.scss
+++ b/app/javascript/styles/mastodon/stream_entries.scss
@@ -27,7 +27,7 @@
   }
 
   .entry {
-    background: $ui-base-color;
+    background: rgba($ui-base-color, 0.8);
 
     .detailed-status,
     .status,
